--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>К-Стор: Корзина и Оплата</title>
+    <title>К-Фреш: Корзина и Оплата</title>
     
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
@@ -93,7 +93,7 @@
 <body>
 
     <div class="header">
-        <h1 style="margin:0">К-Стор 🧺</h1>
+        <h1 style="margin:0">К-Фреш 🧺</h1>
         <div style="font-size: 24px">🛒</div>
     </div>
 
